[package]
name = "actix-hello-world"
version = "0.1.0"
authors = ["Chris Lam <christopher.lam@grainger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug-info = true

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
config = "0.10.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
lazy_static = "1.4"
juniper = "0.14.2"