[package]
name = "hyper_project"
version = "0.1.0"
authors = ["Chris Lam <christopher.lam@grainger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.3"