[package]
name = "solr"
version = "0.1.0"
authors = ["Chris Lam <christopher.lam@grainger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellr = "0.1.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }

[patch.crates-io]
stellr = { path = "/Users/xcxl200/git/development/rust/stellr"}
